--- a/proyectos.html
+++ b/proyectos.html
@@ -213,9 +213,9 @@
                     </div>
                   </div>
                 </div>
-                <!-- <div class="project-item webdesign applications ">
+                <div class="project-item webdesign applications ">
                 <div class="project-image">
-                  <img class="imgprojects" src="images/renders/LA CLÍNICA/01.jpg" alt="" />
+                  <img class="imgprojects" src="images/renders/3.CLÍNICA/P2020119_Clínica  (1).jpg" alt="" />
                   <div class="overlay">
                     <div class="content-wrap">
                       <div class="overlay-content">
@@ -230,7 +230,7 @@
               </div>
               <div class="project-item webdesign applications ">
               <div class="project-image">
-                <img class="imgprojects" src="images/renders/CHALET DANI/01.jpg" alt="" />
+                <img class="imgprojects" src="images/renders/4.CASA DANI/20_VYG - Fachada Chalet Dani  (1).jpg" alt="" />
                 <div class="overlay">
                   <div class="content-wrap">
                     <div class="overlay-content">
@@ -245,7 +245,7 @@
             </div>
             <div class="project-item webdesign applications ">
             <div class="project-image">
-              <img class="imgprojects" src="images/renders/NUCLEO CALLE SAN JOJSÉ/01.jpg" alt="" />
+              <img class="imgprojects" src="images/renders/5.NUCLEO CALLE SAN JOSE/P2021125_Calle San José  (1).jpg" alt="" />
               <div class="overlay">
                 <div class="content-wrap">
                   <div class="overlay-content">
@@ -260,7 +260,7 @@
           </div>
           <div class="project-item webdesign applications ">
           <div class="project-image">
-            <img class="imgprojects" src="images/renders/PISO CARLOS/01.jpg" alt="" />
+            <img class="imgprojects" src="images/renders/6.PISO CARLOS/P2021166_ViviendaCarlos_V2_R1.jpg" alt="" />
             <div class="overlay">
               <div class="content-wrap">
                 <div class="overlay-content">
@@ -272,7 +272,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
             </div>
           </div>
         </div>
